# Xeroa

./: .gitignore  .gitmodules  CMakeLists.txt  XeroaPS.sln  build.bat
proto/: CMakeLists.txt
src/: BasePacket.cpp  BasePacket.h  BufferView.cpp  BufferView.h  CMakeLists.txt  Crypto.cpp  Crypto.h  DynamicBuffer.cpp  DynamicBuffer.h  GameServer.cpp  GameServer.h  HandlePingReq.cpp  HandlePingReq.h  HandlePlayerTokenReq.cpp  HandlePlayerTokenReq.h  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  Kcp.cpp  Kcp.h  main.cpp  main.h  util.h
src/game/: GameServer.cpp  GameServer.h  Kcp.cpp  Kcp.h
src/game/packets/: GetPlayerSocialDetailReq.cpp  GetPlayerSocialDetailReq.h  PingReq.cpp  PingReq.h  PingRsp.cpp  PlayerLoginReq.cpp  PlayerLoginReq.h  PlayerTokenReq.cpp  PlayerTokenReq.h
src/http/: HttpRequest.cpp  HttpRequest.h  HttpRouter.cpp  HttpRouter.h  HttpServer.cpp  HttpSession.cpp  HttpSession.h
src/util/: BasePacket.cpp  BasePacket.h  BufferView.h  Crypto.cpp  PacketIds.h
